versioned_docs/version-1.3.0-beta/commands/oras_blob_delete.mdx
---
title: oras blob delete
sidebar_position: 20
warning: Do NOT modify this generated file
---

# oras blob delete

Delete a blob from a remote registry

```bash
oras blob delete [flags] <name>@<digest>
```

## Examples

Delete a blob:

```bash
oras blob delete localhost:5000/hello@sha256:9a201d228ebd966211f7d1131be19f152be428bd373a92071c71d8deaf83b3e5
```

Delete a blob without prompting confirmation:

```bash
oras blob delete --force localhost:5000/hello@sha256:9a201d228ebd966211f7d1131be19f152be428bd373a92071c71d8deaf83b3e5
```

Delete a blob and print its descriptor:

```bash
oras blob delete --descriptor --force localhost:5000/hello@sha256:9a201d228ebd966211f7d1131be19f152be428bd373a92071c71d8deaf83b3e5
```

## Options

```
      --ca-file string                             server certificate authority file for the remote registry
      --cert-file string                           client certificate file for the remote registry
  -d, --debug                                      output debug logs (implies --no-tty)
      --descriptor                                 output the descriptor
  -f, --force                                      ignore nonexistent references, never prompt
  -H, --header stringArray                         add custom headers to requests
  -h, --help                                       help for delete
      --identity-token string                      registry identity token
      --identity-token-stdin                       read identity token from stdin
      --insecure                                   allow connections to SSL registry without certs
      --key-file string                            client private key file for the remote registry
      --no-tty                                     [Preview] do not show progress output
      --oci-layout                                 set target as an OCI image layout
      --oci-layout-path string                     [Experimental] set the path for the OCI image layout target
  -p, --password string                            registry password or identity token
      --password-stdin                             read password from stdin
      --plain-http                                 allow insecure connections to registry without SSL check
      --pretty                                     prettify JSON objects printed to stdout
      --registry-config path                       path of the authentication file for registry
      --resolve host:port:address[:address_port]   customized DNS for registry, formatted in host:port:address[:address_port]
  -u, --username string                            registry username
```
